2014-05-16  Richard Biener  <rguenther@suse.de>

PR tree-optimization/61194
	* tree-vect-patterns.c (adjust_bool_pattern): Also handle
	bool patterns ending in a COND_EXPR.

	* gcc.dg/vect/pr61194.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@210514 138bc75d-0d04-0410-961f-82ee72b054a4